# layeroptics

./: .gitignore  README.md  pyproject.toml
examples/: magnetooptics.py
layeroptics/: __init__.py  berreman.py  coherent.py  common.py  compute.py  layer.py  light.py  magnet.py  types.py
layeroptics/jax/: __init__.py
whitepaper/: main.md  main.tex
