[tool.poetry]
name = "layeroptics"
version = "0.1.0"
description = ""
authors = ["Vladislav Wohlrath <vladislav@wohlrath.cz>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"

[tool.poetry.group.examples.dependencies]
pandas = "^2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
